[gd_scene load_steps=5 format=3 uid="uid://ctwo53x4gnjm4"]

[ext_resource type="Texture2D" uid="uid://0wjecsdf4nya" path="res://art/spritesforgamefr/start_menu_bg.png" id="1_nxx2i"]
[ext_resource type="Script" path="res://scripts/start.gd" id="1_snq6x"]
[ext_resource type="VideoStream" path="res://videos/intro.ogv" id="3_74r4t"]
[ext_resource type="VideoStream" path="res://art/spritesforgamefr/pixil-gif-drawing-_6_.ogv" id="4_ccsct"]

[node name="start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_snq6x")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575.5, 326.5)
scale = Vector2(1.5013, 1.52546)
texture = ExtResource("1_nxx2i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
z_index = 2
layout_mode = 0
offset_left = -1.0
offset_right = 1279.0
offset_bottom = 720.0
scale = Vector2(0.9, 0.9)
stream = ExtResource("3_74r4t")

[node name="VideoStreamPlayerintrotointro" type="VideoStreamPlayer" parent="."]
z_index = 1
layout_mode = 0
offset_right = 1161.0
offset_bottom = 664.0
scale = Vector2(4.6, 4.6)
stream = ExtResource("4_ccsct")
autoplay = true
buffering_msec = 1000

[node name="begin" type="Button" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 159.0
offset_right = 571.0
offset_bottom = 193.0
text = "Play"

[node name="controlsss" type="Button" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 222.0
offset_right = 571.0
offset_bottom = 256.0
text = "Controls"

[node name="end" type="Button" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 288.0
offset_right = 571.0
offset_bottom = 322.0
text = "Quit"

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="finished" from="VideoStreamPlayerintrotointro" to="." method="_on_video_stream_playerintrotointro_finished"]
[connection signal="pressed" from="begin" to="." method="_on_begin_pressed"]
[connection signal="pressed" from="controlsss" to="." method="_on_controlsss_pressed"]
[connection signal="pressed" from="end" to="." method="_on_end_pressed"]
